# message-system

./: .dockerignore  .gitignore  CLAUDE.md  COMMIT_REVIEW.md  DESIGN.md  DeploymentGuide.md  Dockerfile  README.md  README.zh.md  fly.toml  start.sh  部署指南.md
.github/workflows/: fly-deploy.yml
client-heroui/: .env.development  .env.production  .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  playwright.codex.config.ts  playwright.config.ts  playwright.postgres.config.ts  tailwind.config.js  vite.config.ts
client-heroui/e2e/: helpers.ts  (+12 more)
docs/: a2ui-streaming-implementation.zh.md  ai-run-outbox-worker-migration-plan.md  coco-model-access.md  coco-phase6-real-runner-plan.md  coco-sandbox-artifact.md  coco-static-publish-implementation.md  coco-static-publish-requirements.md  coco-tool-ordering-fix-plan.zh.md  code-agent-app-server-integration-progress.zh.md  code-agent-codex-backend-spike.md  code-agent-model-access.md  code-agent-phase6-real-runner-plan.md  code-agent-runtime-architecture.md  code-agent-sandbox-artifact.md  code-agent-sandbox.md  code-agent-static-publish-implementation.md  code-agent-static-publish-requirements.md  code-agent-tool-ordering-fix-plan.zh.md  code-agent-workspace-ui-plan.md  codex-cli-subscription-backend-plan.zh.md  codex-room-context-cli-design.zh.md  documentation-audit.md  e2e-user-flows-plan.md  github-connector-research.zh.md  identity-coco-permission-plan.md  identity-code-agent-permission-plan.md  image-object-storage-migration-runbook.md  interview-preparation.html  media-viewer-gesture-requirements.md  migration-completion-audit.md  mobile-keyboard-viewport-fix.zh.md  mobile-room-restore-strategy.zh.md  postgres-app-user-runbook.md  postgres-migration-development-summary.zh.md  postgres-persistence-plan.md  postgres-rollout-runbook.md  postgres-test-coverage-plan.zh.md  room-restore-review-fix-plan.zh.md  room-update-review-followup.zh.md  room-update-stale-analysis.zh.md  (+1 more)
server/: .env.example  loadtest.js  package-lock.json  package.json  server.js  server.ts  tsconfig.json
server/roomtalk_coco_runner/: pyproject.toml
server/roomtalk_coco_runner/roomtalk_coco_runner/: __init__.py  codex_app_server.py  codex_cli.py  codex_sdk_app_server.py  platform_tools.py  runner.py
server/roomtalk_coco_runner/tests/: conftest.py  test_codex_app_server.py  test_codex_cli.py  test_codex_sdk_app_server.py  test_platform_tools.py  test_runner.py
server/roomtalk_code_agent_runner/: pyproject.toml
server/roomtalk_code_agent_runner/roomtalk_code_agent_runner/: __init__.py  codex_app_server.py  codex_cli.py  codex_sdk_app_server.py  daemon.py  platform_tools.py  room_context_broker.py  runner.py
server/roomtalk_code_agent_runner/tests/: conftest.py  test_codex_app_server.py  test_codex_cli.py  test_codex_sdk_app_server.py  test_daemon.py  test_plan_shell_policy.py  test_platform_tools.py  test_room_context_broker.py  test_runner.py
(+485 files in other folders)
