[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roomtalk-coco-runner"
version = "0.1.1"
description = "RoomTalk JSONL adapter for the Coco coding assistant"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
roomtalk-coco-runner = "roomtalk_coco_runner.runner:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["roomtalk_coco_runner*"]
