[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "message-system-coco-runner"
version = "0.1.6"
description = "Message System JSONL adapter for the Coco coding assistant"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
message-system-coco-runner = "message-system_coco_runner.runner:main"
message-system-codex-cli-runner = "message-system_coco_runner.codex_cli:main"
message-system-codex-app-server-runner = "message-system_coco_runner.codex_app_server:main"
message-system = "message-system_coco_runner.platform_tools:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["message-system_coco_runner*"]
